@@ -69,3 +69,6 @@ Update JS and CSS and PHP for linter
 
 29/03/17
 Updated CSS for Linter
+
+01/09/17
+Tidy up CSS lint issues from Moodle plugins bot
